--- a/src/components/OptionSelection.module.css
+++ b/src/components/OptionSelection.module.css
@@ -1,4 +1,36 @@
 .grid {
   display: grid;
   grid-template-columns: auto auto;
+  gap: 1rem;
+  margin-top: 5vh;
+}
+
+.ingrid {
+  border: 2px solid rgb(128, 128, 128);
+  border-radius: 0.5rem;
+  transition: all 0.5s ease-in-out;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+}
+.ingrid:hover {
+  background-color: aliceblue;
+  color: black;
+}
+.ingrid:nth-child(3n + 1):hover {
+  border: 2px solid rgb(0, 0, 128);
+}
+.ingrid:nth-child(3n + 2):hover {
+  border: 2px solid rgb(128, 0, 0);
+}
+.ingrid:nth-child(3n):hover {
+  border: 2px solid rgb(0, 128, 0);
+}
+
+.ingrid h3 {
+  font-weight: 700;
+  font-family: monospace;
+}
+
+.ingrid p {
+  font-size: 1rem;
 }
